fixed bug with scrollbar near news container

--- a/css/news.css
+++ b/css/news.css
@@ -1,6 +1,7 @@
 .news-container {
   margin: 36px 0 0;
   text-align: center;
+  overflow: hidden;
 }
 
 .news {
